<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moringaschool.petfinder.MainActivity"
    android:background="#000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/ribeye_marrow"
        android:text="PetFinder"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/findPetsButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:fontFamily="@font/ribeye_marrow"
        android:hint="Enter Zip Code"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Find Pets"
        android:fontFamily="@font/ribeye_marrow"
        android:id="@+id/findPetsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextIcons" />
</RelativeLayout>