<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moringaschool.petfinder.PetsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pets near "
        android:id="@+id/locationTextView"
        android:layout_marginTop="35dp"
        android:textSize="15sp"
        android:fontFamily="@font/ribeye_marrow"
        android:layout_centerHorizontal="true"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/locationTextView"
        android:textSize="15sp"
        android:fontFamily="@font/ribeye_marrow"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>